Included Product Description

--- a/PortalDoFranqueadoGUI/View/FranchiseePurchaseStore.xaml
+++ b/PortalDoFranqueadoGUI/View/FranchiseePurchaseStore.xaml
@@ -130,7 +130,7 @@
         <ListView Grid.Row="2"
                   ItemsSource="{Binding Products}"
                   SelectionMode="Single"
-                  Width="995"
+                  Width="1295"
                   HorizontalAlignment="Left"
                   Style="{StaticResource ListViewUnfocusable}"
                   IsEnabled="{Binding EnabledContent}"
@@ -143,6 +143,15 @@
                                 <Button Command="{Binding OpenFileViewCommand}">
                                     <Image Source="{Binding FileView.ImageData}"/>
                                 </Button>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Descrição" Width="300">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Product.Description}" 
+                                         TextWrapping="Wrap"
+                                         Width="288"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
