--- a/PortalDoFranqueadoGUI/View/ViewImage.xaml
+++ b/PortalDoFranqueadoGUI/View/ViewImage.xaml
@@ -5,10 +5,37 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortalDoFranqueado.View"
              xmlns:viewmodel="clr-namespace:PortalDoFranqueado.ViewModel" 
+             xmlns:me="clr-namespace:PortalDoFranqueado.Util.Mouse" 
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              d:DataContext="{d:DesignInstance Type=viewmodel:ViewImageViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <ScrollViewer>
-        <Image Source="{Binding Source}" Stretch="None"/>
+    <ScrollViewer HorizontalAlignment="Stretch" 
+                  VerticalAlignment="Stretch" 
+                  VerticalScrollBarVisibility="Auto" 
+                  HorizontalScrollBarVisibility="Auto">
+        <Image Source="{Binding Source}" Stretch="None">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="Loaded">
+                    <i:InvokeCommandAction Command="{Binding ResizeImageCommand}"
+                                   CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Image}, Mode=OneWay}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers><Image.LayoutTransform>
+                <ScaleTransform ScaleX="{Binding ZoomFactor}" ScaleY="{Binding ZoomFactor}"/>
+            </Image.LayoutTransform>
+            <Image.InputBindings>
+                <MouseBinding Command="{Binding ZoomInCommand}">
+                    <MouseBinding.Gesture>
+                        <me:MouseWheelUp Modifiers="Ctrl" />
+                    </MouseBinding.Gesture>
+                </MouseBinding>
+                <MouseBinding Command="{Binding ZoomOutCommand}">
+                    <MouseBinding.Gesture>
+                        <me:MouseWheelDown Modifiers="Ctrl" />
+                    </MouseBinding.Gesture>
+                </MouseBinding>
+            </Image.InputBindings>
+        </Image>
     </ScrollViewer>
 </UserControl>
