--- a/PortalDoFranqueadoGUI/View/MainManager.xaml
+++ b/PortalDoFranqueadoGUI/View/MainManager.xaml
@@ -98,33 +98,33 @@
                 </StackPanel>
             </Button>
             <Button Grid.Column="1"
-                Style="{StaticResource MainButton}"
-                IsEnabled="False">
+                    Style="{StaticResource MainButton}"
+                    Command="{Binding PurchaseSuggestionCommand}">
                 <StackPanel>
                     <Label Content="PREVISÃO DE PEDIDO" 
                         Style="{StaticResource LabelButton}"/>
                     <Image Source="/PortalDoFranqueadoGUI;component/Media/previsao.png"
-                    Width="70"/>
+                        Width="70"/>
                 </StackPanel>
             </Button>
             <Button Grid.Column="2"
-                Style="{StaticResource MainButton}"
-                Command="{Binding PhotosCommand}">
+                    Style="{StaticResource MainButton}"
+                    Command="{Binding PhotosCommand}">
                 <StackPanel>
                     <Label Content="FOTOS E VÍDEOS" 
-                    Style="{StaticResource LabelButton}"/>
+                        Style="{StaticResource LabelButton}"/>
                     <Image Source="/PortalDoFranqueadoGUI;component/Media/fotos.png"
-                    Width="70"/>
+                        Width="70"/>
                 </StackPanel>
             </Button>
             <Button Grid.Column="3"
-                Style="{StaticResource MainButton}"
-                Command="{Binding SupportCommand}">
+                    Style="{StaticResource MainButton}"
+                    Command="{Binding SupportCommand}">
                 <StackPanel>
                     <Label Content="MATERIAL DE APOIO" 
-                    Style="{StaticResource LabelButton}"/>
+                            Style="{StaticResource LabelButton}"/>
                     <Image Source="/PortalDoFranqueadoGUI;component/Media/media.png"
-                    Width="70"/>
+                            Width="70"/>
                 </StackPanel>
             </Button>
             <Button Grid.Column="4"
