--- a/PortalDoFranqueadoGUI/Style.xaml
+++ b/PortalDoFranqueadoGUI/Style.xaml
@@ -1,14 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <!--#region Window-->
     <Style TargetType="Window">
         <Setter Property="Background" Value="White"/>
     </Style>
-
+    <!--#endregion-->
+    <!--#region UserControl-->
     <Style TargetType="UserControl">
         <Setter Property="Background" Value="White"/>
     </Style>
-
+    <!--#endregion-->
+    <!--#region Label-->
     <Style TargetType="Label">
         <Setter Property="FontFamily" Value="Open Sans"/>
     </Style>
@@ -27,7 +29,8 @@
     <Style TargetType="Label" x:Key="LabelCell" BasedOn="{StaticResource {x:Type Label}}">
         <Setter Property="Foreground" Value="Black"/>
     </Style>
-
+    <!--#endregion-->
+    <!--#region Button-->
     <Style TargetType="Button">
         <Setter Property="FontFamily" Value="Open Sans"/>
     </Style>
@@ -94,7 +97,8 @@
         <Setter Property="Background" Value="White"/>
         <Setter Property="BorderBrush" Value="White"/>
     </Style>
-
+    <!--#endregion-->
+    <!--#region TextBlock-->
     <Style TargetType="TextBlock">
         <Setter Property="FontFamily" Value="Open Sans"/>
     </Style>
@@ -123,14 +127,37 @@
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
     </Style>
-
+    <Style TargetType="TextBlock" x:Key="TextBlockMediumWhiteMessage" BasedOn="{StaticResource {x:Type TextBlock}}">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="TextBlockSmallWhiteMessage" BasedOn="{StaticResource TextBlockMediumWhiteMessage}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="Normal"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="TextBlockSmallRedMessage" BasedOn="{StaticResource TextBlockMediumWhiteMessage}">
+        <Setter Property="FontSize" Value="10"/>
+        <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="Foreground" Value="Red"/>
+        <Setter Property="Margin" Value="10"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="TextBlockInfoHeader" BasedOn="{StaticResource {x:Type TextBlock}}">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Foreground" Value="White"/>
+    </Style>
+    <!--#endregion-->
+    <!--#region CheckBox-->
     <Style TargetType="CheckBox">
         <Setter Property="FontFamily" Value="Open Sans"/>
     </Style>
     <Style TargetType="CheckBox" x:Key="CheckBoxCell" BasedOn="{StaticResource {x:Type CheckBox}}">
         <Setter Property="Foreground" Value="Black"/>
     </Style>
-
+    <!--#endregion-->
+    <!--#region TextBox-->
     <Style TargetType="TextBox">
         <Setter Property="FontFamily" Value="Open Sans"/>
         <Setter Property="Foreground" Value="Black"/>
@@ -142,11 +169,27 @@
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Height" Value="22"/>
     </Style>
-
+    <Style TargetType="TextBox" x:Key="TextBoxLogin" BasedOn="{StaticResource {x:Type TextBox}}">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="FontSize" Value="16"/>
+    </Style>
+    <!--#endregion-->
+    <!--#region Password-->
+    <Style TargetType="PasswordBox">
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="FontSize" Value="16"/>
+    </Style>
+    <!--#endregion-->
+    <!--#region GridViewColumnHeader-->
     <Style TargetType="GridViewColumnHeader">
         <Setter Property="FontFamily" Value="Open Sans"/>
     </Style>
-
+    <!--#endregion-->
+    <!--#region ListView-->
     <Style TargetType="ListView" x:Key="ListViewUnfocusable">
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
@@ -156,7 +199,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-
+    <!--#endregion-->
+    <!--#region LinearGradientBrush-->
     <LinearGradientBrush x:Key="BlackLinearGradientBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
@@ -165,10 +209,12 @@
             </GradientStopCollection>
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
-
+    <!--#endregion-->
+    <!--#region SolidColorBrush-->
     <SolidColorBrush x:Key="BlackBrush" Color="Black" />
     <SolidColorBrush x:Key="WhiteBrush" Color="White" />
-
+    <!--#endregion-->
+    <!--#region ControlTemplate-->
     <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="ToggleButton">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -190,11 +236,12 @@
                       Data="M 0 0 L 4 4 L 8 0 Z"/>
         </Grid>
     </ControlTemplate>
-
+    
     <ControlTemplate x:Key="ComboBoxTextBox" TargetType="TextBox">
         <Border x:Name="PART_ContentHost" Focusable="False" Background="{TemplateBinding Background}" />
     </ControlTemplate>
-
+    <!--#endregion-->
+    <!--#region ComboBox-->
     <Style TargetType="ComboBox" x:Key="ComboBoxBlack">
         <Setter Property="Height" Value="22"/>
         <Setter Property="BorderBrush" Value="{StaticResource WhiteBrush}"/>
@@ -248,5 +295,6 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <!--#endregion-->
 
 </ResourceDictionary>
