Changed to generate miniature images to show in list view

--- a/PortalDoFranqueadoGUI/View/FranchiseePurchaseStore.xaml
+++ b/PortalDoFranqueadoGUI/View/FranchiseePurchaseStore.xaml
@@ -141,7 +141,7 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Button Command="{Binding OpenFileViewCommand}">
-                                    <Image Source="{Binding FileView.ImageData}"/>
+                                    <Image Source="{Binding FileView.MiniatureFilePath}"/>
                                 </Button>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
