--- a/PortalDoFranqueadoGUI/View/ManagerCollection.xaml
+++ b/PortalDoFranqueadoGUI/View/ManagerCollection.xaml
@@ -82,7 +82,7 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Button Command="{Binding OpenFileViewCommand}">
-                                    <Image Source="{Binding FileView.ImageData}"/>
+                                    <Image Source="{Binding FileView.MiniatureFilePath}"/>
                                 </Button>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
